@@ -1,3 +1,6 @@
+2009-06-01  Satoshi Konno <skonno@cybergarage.org>
+	* Added cg_dictionary_*();
+	
 2009-05-28  Satoshi Konno <skonno@cybergarage.org>
 	* Changed cg_upnp_device_stop() not to send a byebye message when the device isn't running.
 	* Improved cg_string_*() and cg_list_*() not to abort when the specified string object is NULL.
